--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
             <div class="container d-flex">
                 <div class="contact-info mr-auto">
                     <i class="icofont-envelope"></i>
-                    <a href="mailto:contact@example.com">contact@example.com</a>
-                    <i class="icofont-phone"></i> +1 5589 55488 55
-                    <i class="icofont-google-map"></i> A108 Adam Street, NY
+                    <a href="mailto:contact@example.com">contact@smedesk.com</a>
+                    <i class="icofont-phone"></i> +380 50 748 84 00
+                    <i class="icofont-google-map"></i> 96 Pushkins'ka St, Kharkiv
                 </div>
                 <div class="social-links">
                     <a class="twitter" href="#"><i class="icofont-twitter"></i></a>
@@ -44,38 +44,11 @@
 
         <header class="fixed-top" id="header">
             <div class="container d-flex align-items-center">
-                <h1 class="logo mr-auto"><a href="index.html">Smedesk</a></h1>
+                <h1 class="logo mr-auto"><a href="/">Smedesk</a></h1>
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#departments">Departments</a></li>
-                        <li><a href="#doctors">Doctors</a></li>
-                        <li class="drop-down"><a href="">Drop Down</a>
-                            <ul>
-                                <li><a href="#">Drop Down 1</a></li>
-                                <li class="drop-down">
-                                    <a href="#">Deep Drop Down</a>
-                                    <ul>
-                                        <li><a href="#">Deep Drop Down 1</a>
-                                        </li>
-                                        <li><a href="#">Deep Drop Down 2</a>
-                                        </li>
-                                        <li><a href="#">Deep Drop Down 3</a>
-                                        </li>
-                                        <li><a href="#">Deep Drop Down 4</a>
-                                        </li>
-                                        <li><a href="#">Deep Drop Down 5</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li><a href="#">Drop Down 2</a></li>
-                                <li><a href="#">Drop Down 3</a></li>
-                                <li><a href="#">Drop Down 4</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li class="active"><a href="/">Home</a></li>
+                        <li class="active"><a href="/signup/">Sign Up</a></li>
                     </ul>
                 </nav>
                 <a class="appointment-btn scrollto" href="#appointment">Make an Appointment</a>
