Added mobile menu.

--- a/index.html
+++ b/index.html
@@ -113,5 +113,9 @@
 
 
         </main>
+
+        <script src="assets/vendor/jquery/jquery.min.js"></script>
+        <script src="assets/js/main.js"></script>
+
     </body>
 </html>
