--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
                         <li class="active"><a href="/">Home</a></li>
-                        <li class="active"><a href="/signup/">Sign Up</a></li>
+                        <li><a href="/signup/">Sign Up</a></li>
                     </ul>
                 </nav>
                 <a class="appointment-btn scrollto" href="#appointment">Make an Appointment</a>
