--- a/signup/index.html
+++ b/signup/index.html
@@ -56,7 +56,7 @@
         </header>
 
         <main id="main">
-            <section class="signup">
+            <section class="signup center-form">
                 <div class="container">
                     <div class="section-title">
                         <h2>CREATE ACCOUNT</h2>
