--- a/signup/index.html
+++ b/signup/index.html
@@ -27,8 +27,7 @@
         <div class="d-none d-lg-flex align-items-center fixed-top" id="topbar">
             <div class="container d-flex">
                 <div class="contact-info mr-auto">
-                    <i class="icofont-envelope"></i>
-                    <a href="mailto:contact@example.com">contact@smedesk.com</a>
+                    <i class="icofont-envelope"></i><a href="mailto:contact@example.com">contact@smedesk.com</a>
                     <i class="icofont-phone"></i> +380 50 748 84 00
                     <i class="icofont-google-map"></i> 96 Pushkins'ka St, Kharkiv
                 </div>
@@ -41,10 +40,11 @@
                 </div>
             </div>
         </div>
-
         <header class="fixed-top" id="header">
             <div class="container d-flex align-items-center">
-                <h1 class="logo mr-auto"><a href="/">Smedesk</a></h1>
+                <h1 class="logo mr-auto">
+                    <a href="/">Smedesk</a>
+                </h1>
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
                         <li><a href="/">Home</a></li>
@@ -53,8 +53,14 @@
                 </nav>
                 <a class="appointment-btn scrollto" href="#appointment">Make an Appointment</a>
             </div>
+            <div class="alert alert-success" role="alert">
+                Registration was successful,
+                <a href="/signin/" class="alert-link">click here</a> to sign in.
+                <button class="close" type="button" data-dismiss="alert" aria-label="Close">
+                    <span class="font-weight-light" aria-hidden="true">×</span>
+                </button>
+            </div>
         </header>
-
         <main id="main">
             <section class="signup center-form">
                 <div class="container">
@@ -68,12 +74,15 @@
                             <form class="signup-form" role="form">
                                 <div class="form-group">
                                     <input class="form-control" id="name" name="name" placeholder="Your Name" type="text"/>
+                                    <div class="invalid-feedback"></div>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" id="email" name="email" placeholder="Your Email" type="text"/>
+                                    <div class="invalid-feedback"></div>
                                 </div>
                                 <div class="form-group">
                                     <input class="form-control" id="password" name="password" placeholder="Your Password" type="password"/>
+                                    <div class="invalid-feedback"></div>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" id="terms" name="terms" type="checkbox"/>
@@ -81,6 +90,7 @@
                                         I agree to all the statements in
                                         <a class="term-service" href="#">Terms of service</a>
                                     </label>
+                                    <div class="invalid-feedback"></div>
                                 </div>
                                 <div class="text-center signup-button">
                                     <button type="submit">SIGN UP</button>
@@ -97,9 +107,7 @@
                 </div>
             </section>
         </main>
-
         <script src="../assets/vendor/jquery/jquery.min.js"></script>
         <script src="../assets/js/main.js"></script>
-
     </body>
 </html>
