--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
                         <li class="active"><a href="/">Home</a></li>
+                        <li><a href="/signin/">Sign In</a></li>
                         <li><a href="/signup/">Sign Up</a></li>
                     </ul>
                 </nav>
