--- a/signin/index.html
+++ b/signin/index.html
@@ -48,8 +48,8 @@
                 <nav class="nav-menu d-none d-lg-block">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/signin/">Sign In</a></li>
-                        <li class="active"><a href="/signup/">Sign Up</a></li>
+                        <li class="active"><a href="/signin/">Sign In</a></li>
+                        <li><a href="/signup/">Sign Up</a></li>
                     </ul>
                 </nav>
                 <a class="appointment-btn scrollto" href="#appointment">Make an Appointment</a>
@@ -66,17 +66,16 @@
             <section class="auth center-form">
                 <div class="container">
                     <div class="section-title">
-                        <h2>CREATE ACCOUNT</h2>
+                        <h2>SIGN INTO ACCOUNT</h2>
+                        <p class="description">
+                            Sign in to manage your workload and discover new ways of further increasing the work efficiency.
+                        </p>
                     </div>
                 </div>
                 <div class="container">
                     <div class="row mt-5">
                         <div class="col-lg-8 mt-5 mt-lg-0">
                             <form class="auth-form" role="form">
-                                <div class="form-group">
-                                    <input class="form-control" id="name" name="name" placeholder="Your Name" type="text"/>
-                                    <div class="invalid-feedback"></div>
-                                </div>
                                 <div class="form-group">
                                     <input class="form-control" id="email" name="email" placeholder="Your Email" type="text"/>
                                     <div class="invalid-feedback"></div>
@@ -85,21 +84,13 @@
                                     <input class="form-control" id="password" name="password" placeholder="Your Password" type="password"/>
                                     <div class="invalid-feedback"></div>
                                 </div>
-                                <div class="form-check">
-                                    <input class="form-check-input" id="terms" name="terms" type="checkbox"/>
-                                    <label class="form-check-label" for="terms">
-                                        I agree to all the statements in
-                                        <a class="term-service" href="#">Terms of service</a>
-                                    </label>
-                                    <div class="invalid-feedback"></div>
-                                </div>
-                                <div class="text-center signup-button">
-                                    <button type="submit">SIGN UP</button>
+                                <div class="text-center signin-button">
+                                    <button type="submit">SIGN IN</button>
                                 </div>
                                 <div class="sub-action">
                                     <div class="link">
-                                        Already have an account?
-                                        <a href="/signin/">Sign in</a>
+                                        Don't have an account yet?
+                                        <a href="/signup/">Sign up</a>
                                     </div>
                                 </div>
                             </form>
