Finished developing Signin features.

--- a/signin/index.html
+++ b/signin/index.html
@@ -54,9 +54,8 @@
                 </nav>
                 <a class="appointment-btn scrollto" href="#appointment">Make an Appointment</a>
             </div>
-            <div class="alert alert-success" role="alert">
-                Registration was successful,
-                <a href="/signin/" class="alert-link">click here</a> to sign in.
+            <div class="alert alert-danger" role="alert">
+                <div class="text"></div>
                 <button class="close" type="button" data-dismiss="alert" aria-label="Close">
                     <span class="font-weight-light" aria-hidden="true">×</span>
                 </button>
