Adjusted frontend for Signout and CurrentUser endpoints.

--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -37,7 +37,7 @@
                                     <p class="dropdown-title-text mt-2">See terms and conditions</p>
                                 </div>
                                 <div class="dropdown-footer">
-                                    <a href="#">Sign Out</a>
+                                    <a href="#" class="signout-button">Sign Out</a>
                                 </div>
                             </div>
                         </li>
@@ -256,6 +256,7 @@
                 </footer>
             </div>
         </div>
+        <div id="preloader"></div>
         <script src="../assets/vendor/admin-template/js/core.js"></script>
         <script src="../assets/vendor/apexcharts/apexcharts.min.js"></script>
         <script src="../assets/vendor/chartjs/Chart.min.js"></script>
